--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check out Python
-      - uses: actions/checkout@v3
-
+      - name: Check out repo
+      - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2.0.0
         with:
