--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out repo
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2.0.0
         with:
