--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Step 1 - Create a temporary artifact downloads folder
-        run: mkdir  output_folder
+        run: mkdir-p  output_folder
   
       - name: Run Scraper
         run:  scrapy crawl match_logs -a domain=https://www.transfermarkt.com/premier-league/startseite/wettbewerb/GB1
